# re-norm

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: git_enforce_staged.sh
src/renorm/: __init__.py  exceptions.py  parser.py  pattern.py  specs.py
tests/: test_placeholder.py  test_specs.py
tests/end_to_end/: assert_utils.py  test_performance.py  test_placeholder_syntax_interactions.py  test_placeholder_syntax_rules.py  test_re_flags.py
tests/test_end_to_end/: test_placeholder_syntax.py  test_placeholder_syntax_rules.py
tests/unit/specs/: test_nospec.py  test_num.py
tests/unit/specs/_data/: number_literal.py
