[project]
name = "renorm"
version = "0.1.0"
description = "Regex normalization engine"
readme = "README.md"
authors = [
    { name = "Ricardo M.P. da Silva", email = "rmpdasilva@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
re-norm = "renorm:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
