[project]
name = "renorm"
version = "0.1.0"
description = "Regex normalization engine"
readme = "README.md"
authors = [
    { name = "Ricardo M.P. da Silva", email = "rmpdasilva@gmail.com" }
]
requires-python = ">=3.13"

[project.scripts]
re-norm = "renorm:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pylint>=4.0.5",
    "black>=26.3.1",
    "pytest>=9.0.3",
]

[tool.black]
target-version = ["py313"]
line-length = 100

